--- a/contract.Rmd
+++ b/contract.Rmd
@@ -6,7 +6,7 @@ params:
   weekonemonday: "2023-01-09"
   thesisdeadline: "2023-01-10"
   springbreak: "2023-01-10"
-  name: Tukey Cat
+  name: Graham Overheu
   labs: 11
   portfolios: 10
   grade:
