--- a/contract.Rmd
+++ b/contract.Rmd
@@ -164,7 +164,7 @@ Note: This is an example schedule. You are welcomed and encouraged to rearrange 
 - [ ] `r advdate(dayone, 1, topic)`
   - Finish Lab 1 by `r startweek`:  `r advdate(dayone, 1, assignment=startweek)`
 - [ ] `r advdate(dayone, 2, topic)`
-  - Finish Lab 2 by `r startweek`:  `r advdate(dayone, 2, assignment=startweek)`
+  - Finish Lab 2 by 1/23
   - Propose your contract to Mason by `r startweek`:  `r advdate(dayone, 2, assignment=startweek)`
 - [ ]  `r advdate(dayone, 3, topic)`
   - Finish Lab 3  by `r startweek`:  `r advdate(dayone, 3, assignment=startweek)`
